--- a/MarvelComics/Base.lproj/Main.storyboard
+++ b/MarvelComics/Base.lproj/Main.storyboard
@@ -4,7 +4,9 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -42,6 +44,116 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2sZ-Tr-u7K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1842.4000000000001" y="118.29085457271366"/>
+        </scene>
+        <!--Comic View Controller-->
+        <scene sceneID="vHj-kb-39b">
+            <objects>
+                <viewController storyboardIdentifier="ComicViewController" id="lrp-Se-riE" customClass="ComicViewController" customModule="MarvelComics" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I33-ZP-8Fq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hfk-Hi-GLk">
+                                <rect key="frame" x="16" y="20" width="120" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="Tu2-Ws-Bmw"/>
+                                    <constraint firstAttribute="height" constant="160" id="h7P-Mv-rzl"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHn-DV-cfD">
+                                <rect key="frame" x="144" y="41" width="215" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="1TI-N0-hb5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issue number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNQ-WG-HbM">
+                                <rect key="frame" x="144" y="130" width="215" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hDa-xM-uoG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxo-fZ-bMg">
+                                <rect key="frame" x="16" y="197" width="343" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="pM6-9L-LeV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Characters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcO-dD-mdV">
+                                <rect key="frame" x="16" y="352" width="343" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="6CR-4d-bvG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="A2j-rx-yBf">
+                                <rect key="frame" x="16" y="238" width="343" height="97"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="97" id="wqW-Fn-hT0"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rn0-qv-b74">
+                                <rect key="frame" x="16" y="380" width="343" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="0G3-db-27V"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="A2j-rx-yBf" firstAttribute="top" secondItem="vxo-fZ-bMg" secondAttribute="bottom" constant="8" id="6uJ-Z6-vue"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="gNQ-WG-HbM" secondAttribute="trailing" constant="16" id="B4b-Oa-V0n"/>
+                            <constraint firstItem="Hfk-Hi-GLk" firstAttribute="top" secondItem="Ndp-4E-yKB" secondAttribute="top" constant="20" id="ExN-tO-z8T"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="vxo-fZ-bMg" secondAttribute="trailing" constant="16" id="ISb-4c-2si"/>
+                            <constraint firstItem="vxo-fZ-bMg" firstAttribute="top" secondItem="Hfk-Hi-GLk" secondAttribute="bottom" constant="17" id="ROU-5N-9k0"/>
+                            <constraint firstItem="dcO-dD-mdV" firstAttribute="top" secondItem="A2j-rx-yBf" secondAttribute="bottom" constant="17" id="Sna-UH-Iev"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="dcO-dD-mdV" secondAttribute="trailing" constant="16" id="SrN-kX-H8V"/>
+                            <constraint firstItem="eHn-DV-cfD" firstAttribute="leading" secondItem="Hfk-Hi-GLk" secondAttribute="trailing" constant="8" id="VC2-4p-p7z"/>
+                            <constraint firstItem="Hfk-Hi-GLk" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="W7F-Sh-1Te"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="rn0-qv-b74" secondAttribute="trailing" constant="16" id="XPT-p0-Y5l"/>
+                            <constraint firstItem="gNQ-WG-HbM" firstAttribute="top" secondItem="eHn-DV-cfD" secondAttribute="bottom" constant="29" id="chR-4b-yHX"/>
+                            <constraint firstItem="eHn-DV-cfD" firstAttribute="top" secondItem="Ndp-4E-yKB" secondAttribute="top" constant="41" id="eFJ-Uj-IAz"/>
+                            <constraint firstItem="dcO-dD-mdV" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="eGD-yF-rKr"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="eHn-DV-cfD" secondAttribute="trailing" constant="16" id="eek-h8-Ah3"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="A2j-rx-yBf" secondAttribute="trailing" constant="16" id="evm-iW-XdD"/>
+                            <constraint firstItem="vxo-fZ-bMg" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="gUy-Wn-wBJ"/>
+                            <constraint firstItem="gNQ-WG-HbM" firstAttribute="leading" secondItem="Hfk-Hi-GLk" secondAttribute="trailing" constant="8" id="ilN-f0-lT2"/>
+                            <constraint firstItem="A2j-rx-yBf" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="joT-zW-e4s"/>
+                            <constraint firstItem="rn0-qv-b74" firstAttribute="top" secondItem="dcO-dD-mdV" secondAttribute="bottom" constant="7.5" id="kAo-vv-Tzp"/>
+                            <constraint firstItem="rn0-qv-b74" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="rWU-v3-kEG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ndp-4E-yKB"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="charactersTextView" destination="rn0-qv-b74" id="GSw-cx-boG"/>
+                        <outlet property="coverImgView" destination="Hfk-Hi-GLk" id="aGO-Ou-E6U"/>
+                        <outlet property="descriptionTextView" destination="A2j-rx-yBf" id="eEI-Bb-3XW"/>
+                        <outlet property="issueLabel" destination="gNQ-WG-HbM" id="T3l-2C-dwi"/>
+                        <outlet property="nameLabel" destination="eHn-DV-cfD" id="MbC-eH-fLf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iC2-gA-KMI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2704.8000000000002" y="116.49175412293854"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="T5S-OK-Ilp">
