--- a/MarvelComics/Base.lproj/Main.storyboard
+++ b/MarvelComics/Base.lproj/Main.storyboard
@@ -42,6 +42,12 @@
                     <navigationItem key="navigationItem" id="4xU-D0-wx8"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2sZ-Tr-u7K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="geC-43-bvK">
+                    <connections>
+                        <action selector="onGestureTap:" destination="umz-Sp-Oe4" id="cMO-RK-gCO"/>
+                        <outlet property="delegate" destination="Ftl-NI-REd" id="MVC-YP-8Rg"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1842.4000000000001" y="118.29085457271366"/>
         </scene>
@@ -54,88 +60,88 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hfk-Hi-GLk">
-                                <rect key="frame" x="16" y="20" width="120" height="160"/>
+                                <rect key="frame" x="16" y="20" width="135" height="180"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="Tu2-Ws-Bmw"/>
-                                    <constraint firstAttribute="height" constant="160" id="h7P-Mv-rzl"/>
+                                    <constraint firstAttribute="width" constant="135" id="Tu2-Ws-Bmw"/>
+                                    <constraint firstAttribute="height" constant="180" id="h7P-Mv-rzl"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHn-DV-cfD">
-                                <rect key="frame" x="144" y="41" width="215" height="60"/>
+                                <rect key="frame" x="164" y="41" width="196" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="1TI-N0-hb5"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issue number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNQ-WG-HbM">
-                                <rect key="frame" x="144" y="130" width="215" height="30"/>
+                                <rect key="frame" x="164" y="113" width="215" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="hDa-xM-uoG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxo-fZ-bMg">
-                                <rect key="frame" x="16" y="197" width="343" height="33"/>
+                                <rect key="frame" x="16" y="220" width="343" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="pM6-9L-LeV"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Characters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcO-dD-mdV">
-                                <rect key="frame" x="16" y="352" width="343" height="20.5"/>
+                                <rect key="frame" x="16" y="366" width="343" height="33"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20.5" id="6CR-4d-bvG"/>
+                                    <constraint firstAttribute="height" constant="33" id="6CR-4d-bvG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="A2j-rx-yBf">
-                                <rect key="frame" x="16" y="238" width="343" height="97"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A2j-rx-yBf">
+                                <rect key="frame" x="16" y="261" width="343" height="97"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="97" id="wqW-Fn-hT0"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rn0-qv-b74">
-                                <rect key="frame" x="16" y="380" width="343" height="128"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rn0-qv-b74">
+                                <rect key="frame" x="16" y="407" width="343" height="96"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="0G3-db-27V"/>
+                                    <constraint firstAttribute="height" constant="96" id="0G3-db-27V"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="A2j-rx-yBf" firstAttribute="top" secondItem="vxo-fZ-bMg" secondAttribute="bottom" constant="8" id="6uJ-Z6-vue"/>
-                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="gNQ-WG-HbM" secondAttribute="trailing" constant="16" id="B4b-Oa-V0n"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="gNQ-WG-HbM" secondAttribute="trailing" constant="-4" id="B4b-Oa-V0n"/>
                             <constraint firstItem="Hfk-Hi-GLk" firstAttribute="top" secondItem="Ndp-4E-yKB" secondAttribute="top" constant="20" id="ExN-tO-z8T"/>
                             <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="vxo-fZ-bMg" secondAttribute="trailing" constant="16" id="ISb-4c-2si"/>
-                            <constraint firstItem="vxo-fZ-bMg" firstAttribute="top" secondItem="Hfk-Hi-GLk" secondAttribute="bottom" constant="17" id="ROU-5N-9k0"/>
-                            <constraint firstItem="dcO-dD-mdV" firstAttribute="top" secondItem="A2j-rx-yBf" secondAttribute="bottom" constant="17" id="Sna-UH-Iev"/>
+                            <constraint firstItem="vxo-fZ-bMg" firstAttribute="top" secondItem="Hfk-Hi-GLk" secondAttribute="bottom" constant="20" id="ROU-5N-9k0"/>
+                            <constraint firstItem="dcO-dD-mdV" firstAttribute="top" secondItem="A2j-rx-yBf" secondAttribute="bottom" constant="8" id="Sna-UH-Iev"/>
                             <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="dcO-dD-mdV" secondAttribute="trailing" constant="16" id="SrN-kX-H8V"/>
-                            <constraint firstItem="eHn-DV-cfD" firstAttribute="leading" secondItem="Hfk-Hi-GLk" secondAttribute="trailing" constant="8" id="VC2-4p-p7z"/>
+                            <constraint firstItem="eHn-DV-cfD" firstAttribute="leading" secondItem="Hfk-Hi-GLk" secondAttribute="trailing" constant="13" id="VC2-4p-p7z"/>
                             <constraint firstItem="Hfk-Hi-GLk" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="W7F-Sh-1Te"/>
                             <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="rn0-qv-b74" secondAttribute="trailing" constant="16" id="XPT-p0-Y5l"/>
-                            <constraint firstItem="gNQ-WG-HbM" firstAttribute="top" secondItem="eHn-DV-cfD" secondAttribute="bottom" constant="29" id="chR-4b-yHX"/>
+                            <constraint firstItem="gNQ-WG-HbM" firstAttribute="top" secondItem="eHn-DV-cfD" secondAttribute="bottom" constant="12" id="chR-4b-yHX"/>
                             <constraint firstItem="eHn-DV-cfD" firstAttribute="top" secondItem="Ndp-4E-yKB" secondAttribute="top" constant="41" id="eFJ-Uj-IAz"/>
                             <constraint firstItem="dcO-dD-mdV" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="eGD-yF-rKr"/>
-                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="eHn-DV-cfD" secondAttribute="trailing" constant="16" id="eek-h8-Ah3"/>
+                            <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="eHn-DV-cfD" secondAttribute="trailing" constant="15" id="eek-h8-Ah3"/>
                             <constraint firstItem="Ndp-4E-yKB" firstAttribute="trailing" secondItem="A2j-rx-yBf" secondAttribute="trailing" constant="16" id="evm-iW-XdD"/>
                             <constraint firstItem="vxo-fZ-bMg" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="gUy-Wn-wBJ"/>
-                            <constraint firstItem="gNQ-WG-HbM" firstAttribute="leading" secondItem="Hfk-Hi-GLk" secondAttribute="trailing" constant="8" id="ilN-f0-lT2"/>
+                            <constraint firstItem="gNQ-WG-HbM" firstAttribute="leading" secondItem="Hfk-Hi-GLk" secondAttribute="trailing" constant="13" id="ilN-f0-lT2"/>
                             <constraint firstItem="A2j-rx-yBf" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="joT-zW-e4s"/>
                             <constraint firstItem="rn0-qv-b74" firstAttribute="top" secondItem="dcO-dD-mdV" secondAttribute="bottom" constant="7.5" id="kAo-vv-Tzp"/>
                             <constraint firstItem="rn0-qv-b74" firstAttribute="leading" secondItem="Ndp-4E-yKB" secondAttribute="leading" constant="16" id="rWU-v3-kEG"/>
